--- a/org.jrebirth/pom.xml
+++ b/org.jrebirth/pom.xml
@@ -10,7 +10,7 @@
 
 	<groupId>org</groupId>
 	<artifactId>jrebirth</artifactId>
-	<version>7.7.0-SNAPSHOT</version>
+	<version>7.7.0</version>
 
 	<packaging>pom</packaging>
 	<name>JRebirth Application Framework</name>
