--- a/org.jrebirth/sample/pom.xml
+++ b/org.jrebirth/sample/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org</groupId>
 		<artifactId>jrebirth</artifactId>
-		<version>7.7.0-SNAPSHOT</version>
+		<version>7.7.0</version>
 		<relativePath>..</relativePath>
 	</parent>
 
@@ -169,13 +169,13 @@
 		<dependency>
 			<groupId>org.jrebirth</groupId>
 			<artifactId>core</artifactId>
-			<version>7.7.0-SNAPSHOT</version>
+			<version>7.7.0</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.jrebirth</groupId>
 			<artifactId>preloader</artifactId>
-			<version>7.7.0-SNAPSHOT</version>
+			<version>7.7.0</version>
 		</dependency>
 
 	</dependencies>
