--- a/org.jrebirth/showcase/analyzer/pom.xml
+++ b/org.jrebirth/showcase/analyzer/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<artifactId>showcase</artifactId>
 		<groupId>org.jrebirth</groupId>
-		<version>7.7.0-SNAPSHOT</version>
+		<version>7.7.0</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<groupId>org.jrebirth</groupId>
