--- a/org.jrebirth.af/showcase/fxml/.project
+++ b/org.jrebirth.af/showcase/fxml/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.jrebirth.showcase.fxml</name>
+	<name>org.jrebirth.af.showcase.fxml</name>
 	<comment></comment>
 	<projects>
 	</projects>
