--- a/org.jrebirth.af/archetype/pom.xml
+++ b/org.jrebirth.af/archetype/pom.xml
@@ -2,13 +2,13 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>org</groupId>
-		<artifactId>jrebirth</artifactId>
+		<groupId>org.jrebirth</groupId>
+		<artifactId>af</artifactId>
 		<version>7.7.0</version>
 		<relativePath>..</relativePath>
 	</parent>
 
-	<groupId>org.jrebirth</groupId>
+	<groupId>org.jrebirth.af</groupId>
 	<artifactId>archetype</artifactId>
 	<packaging>maven-archetype</packaging>
 
