--- a/org.jrebirth.af/distribution/pom.xml
+++ b/org.jrebirth.af/distribution/pom.xml
@@ -1,13 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org</groupId>
-		<artifactId>jrebirth</artifactId>
+		<groupId>org.jrebirth</groupId>
+		<artifactId>af</artifactId>
 		<version>7.7.0</version>
 		<relativePath>..</relativePath>
 	</parent>
 
-	<groupId>org.jrebirth</groupId>
+	<groupId>org.jrebirth.af</groupId>
 	<artifactId>distribution</artifactId>
 	<packaging>pom</packaging>
 
