--- a/org.jrebirth.af/sample/pom.xml
+++ b/org.jrebirth.af/sample/pom.xml
@@ -2,13 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org</groupId>
-		<artifactId>jrebirth</artifactId>
+		<groupId>org.jrebirth</groupId>
+		<artifactId>af</artifactId>
 		<version>7.7.0</version>
 		<relativePath>..</relativePath>
 	</parent>
 
-	<groupId>org.jrebirth</groupId>
+	<groupId>org.jrebirth.af</groupId>
 	<artifactId>sample</artifactId>
 	<packaging>jar</packaging>
 
@@ -167,13 +167,13 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.jrebirth</groupId>
+			<groupId>org.jrebirth.af</groupId>
 			<artifactId>core</artifactId>
 			<version>7.7.0</version>
 		</dependency>
 
 		<dependency>
-			<groupId>org.jrebirth</groupId>
+			<groupId>org.jrebirth.af</groupId>
 			<artifactId>preloader</artifactId>
 			<version>7.7.0</version>
 		</dependency>
