--- a/org.jrebirth.af/showcase/undoredo/.project
+++ b/org.jrebirth.af/showcase/undoredo/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.jrebirth.showcase.undoredo</name>
+	<name>org.jrebirth.af.showcase.undoredo</name>
 	<comment></comment>
 	<projects>
 	</projects>
