--- a/org.jrebirth.af/transition/pom.xml
+++ b/org.jrebirth.af/transition/pom.xml
@@ -1,12 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<artifactId>jrebirth</artifactId>
-		<groupId>org</groupId>
+		<artifactId>af</artifactId>
+		<groupId>org.jrebirth</groupId>
 		<version>7.7.0</version>
 		<relativePath>..</relativePath>
 	</parent>
-	<groupId>org.jrebirth</groupId>
+	<groupId>org.jrebirth.af</groupId>
 	<artifactId>transition</artifactId>
 	<packaging>jar</packaging>
 
@@ -15,7 +15,7 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.jrebirth</groupId>
+			<groupId>org.jrebirth.af</groupId>
 			<artifactId>core</artifactId>
 			<version>7.7.0</version>
 		</dependency>
