--- a/org.jrebirth.af/undoredo/.project
+++ b/org.jrebirth.af/undoredo/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.jrebirth.undoredo</name>
+	<name>org.jrebirth.af.undoredo</name>
 	<comment></comment>
 	<projects>
 	</projects>
