Move analyzer application and configure showcase apps launcher

--- a/org.jrebirth.af/sample/pom.xml
+++ b/org.jrebirth.af/sample/pom.xml
@@ -23,7 +23,7 @@
 		<deployPath>${project.artifactId}/${project.version}</deployPath>
 
 		<jnlpFilename>sample.jnlp</jnlpFilename>
-		<appClass>org.jrebirth.sample.SampleApplication</appClass>
+		<appClass>org.jrebirth.af.sample.SampleApplication</appClass>
 
 		<appletWidth>1024</appletWidth>
 		<appletHeight>768</appletHeight>
