--- a/org.jrebirth.af/showcase/analyzer/src/main/resources/jrebirth.properties
+++ b/org.jrebirth.af/showcase/analyzer/src/main/resources/jrebirth.properties
@@ -22,9 +22,9 @@ followUpServiceTasks=false
 ## Disable it to improve performances, log could be translated later.
 logResolution=true
 ## The handler used while running in developer mode to manage unprocessed wave.
-unprocessedWaveHandler=org.jrebirth.core.link.DefaultUnprocessedWaveHandler
+unprocessedWaveHandler=org.jrebirth.af.core.link.DefaultUnprocessedWaveHandler
 ## The factory used to create components.
-componentFactory=org.jrebirth.core.facade.DefaultComponentFactory
+componentFactory=org.jrebirth.af.core.facade.DefaultComponentFactory
 ## First Close Retry Delay in milliseconds, time to wait when application try to close the first time.
 closeRetryDelayFirst=4000
 ## Close Retry Delay in milliseconds, time to wait when application try to close all other time.
