--- a/org.jrebirth.af/pom.xml
+++ b/org.jrebirth.af/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 
 	<groupId>org.jrebirth</groupId>
-	<version>7.7.0</version>
+	<version>7.7.1-SNAPSHOT</version>
 
 	<packaging>pom</packaging>
 	<name>JRebirth Application Framework</name>
