--- a/org.jrebirth.af/pom.xml
+++ b/org.jrebirth.af/pom.xml
@@ -9,7 +9,8 @@
 	</parent>
 
 	<groupId>org.jrebirth</groupId>
-	<version>7.7.1-SNAPSHOT</version>
+	<artifactId>af</artifactId>
+	<version>8.0.0-SNAPSHOT</version>
 
 	<packaging>pom</packaging>
 	<name>JRebirth Application Framework</name>
@@ -113,6 +114,17 @@
 		<!--<sourceEncoding>UTF-8</sourceEncoding> -->
 
 		<plugins>
+		
+		<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+					<!-- <compilerArguments> <bootclasspath>${java.home}/lib/rt.jar:${java.home}/lib/jfxrt.jar</bootclasspath> </compilerArguments> -->
+				</configuration>
+			</plugin>
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -308,5 +320,4 @@
 		</site>
 	</distributionManagement>
 
-	<artifactId>af</artifactId>
 </project>
