--- a/org.jrebirth.af/showcase/analyzer/pom.xml
+++ b/org.jrebirth.af/showcase/analyzer/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<artifactId>showcase</artifactId>
 		<groupId>org.jrebirth.af</groupId>
-		<version>7.7.1-SNAPSHOT</version>
+		<version>7.7.1</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<groupId>org.jrebirth.af.showcase</groupId>
