--- a/org.jrebirth.af/showcase/undoredo/pom.xml
+++ b/org.jrebirth.af/showcase/undoredo/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.jrebirth.af</groupId>
 		<artifactId>showcase</artifactId>
-		<version>7.7.1-SNAPSHOT</version>
+		<version>7.7.1</version>
 		<relativePath>..</relativePath>
 	</parent>
 
@@ -37,7 +37,7 @@
 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>undoredo</artifactId>
-			<version>7.7.1-SNAPSHOT</version>
+			<version>7.7.1</version>
 		</dependency>
 		
 	</dependencies>
