--- a/org.jrebirth.af/showcase/pom.xml
+++ b/org.jrebirth.af/showcase/pom.xml
@@ -124,6 +124,14 @@
 					<artifactId>webstart-maven-plugin</artifactId>
 					<version>1.0-beta-6</version>
 
+					<dependencies>
+						<dependency>
+							<groupId>org.codehaus.mojo</groupId>
+							<artifactId>keytool-api-1.7</artifactId>
+							<version>1.4</version>
+						</dependency>
+					</dependencies>
+
 					<executions>
 						<execution>
 							<phase>verify</phase>
@@ -184,7 +192,7 @@
 						</sign>
 
 						<pack200>
-							<enabled>true</enabled>
+							<enabled>false</enabled>
 						</pack200>
 						<gzip>true</gzip>
 
