--- a/org.jrebirth.af/pom.xml
+++ b/org.jrebirth.af/pom.xml
@@ -21,12 +21,12 @@
 	<inceptionYear>2011</inceptionYear>
 
 	<properties>
-		<lightningtalk.version>1.1.1</lightningtalk.version>
-		<masteringtables.version>1.1.0</masteringtables.version>
-		<jaf.version>1.1.0</jaf.version>
-		<breizhcamp.version>1.1.0</breizhcamp.version>
-		<eclipseday.version>1.0.0</eclipseday.version>
-		<eclipsecon.version>1.0.0</eclipsecon.version>
+		<LightningTalk-version>1.1.1</LightningTalk-version>
+		<MasteringTables-version>1.1.0</MasteringTables-version>
+		<Jaf-version>1.1.0</Jaf-version>
+		<Breizhcamp-version>1.1.0</Breizhcamp-version>
+		<EclipseDay-version>1.0.0</EclipseDay-version>
+		<EclipseCON-version>1.0.0</EclipseCON-version>
 	</properties>
 
 	<modules>
