Update all Eclipse settings

--- a/org.jrebirth.af/core/.classpath
+++ b/org.jrebirth.af/core/.classpath
@@ -19,7 +19,8 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 		<accessrules>
-			<accessrule kind="accessible" pattern="javafx*"/>
+			<accessrule kind="accessible" pattern="javafx"/>
+			<accessrule kind="accessible" pattern="javafx.*"/>
 		</accessrules>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
