--- a/org.jrebirth.af/fxform/.settings/org.sonar.ide.eclipse.core.prefs
+++ b/org.jrebirth.af/fxform/.settings/org.sonar.ide.eclipse.core.prefs
@@ -1,6 +1,6 @@
 analyseLocally=false
 eclipse.preferences.version=1
-extraProperties=sonar.host.url\=http\://quality.jrebirth.org\r\nsonar.jdbc.url\=jdbc\:mysql\://localhost\:3306/sonar?useUnicode\=true&characterEncoding\=utf8\r\nsonar.jdbc.driver\=com.mysql.jdbc.Driver\r\nsonar.language\=java
+extraProperties=sonar.host.url\=http\://quality.jrebirth.org\r\nsonar.jdbc.driver\=com.mysql.jdbc.Driver\r\nsonar.jdbc.url\=jdbc\:mysql\://localhost\:3306/sonar?useUnicode\=true&characterEncoding\=utf8\r\nsonar.language\=java
 lastAnalysisDate=1378159970000
 projectKey=org.jrebirth.af\:fxform
 serverUrl=http\://quality.jrebirth.org
