First Tab round

--- a/org.jrebirth.af/component/pom.xml
+++ b/org.jrebirth.af/component/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.jrebirth</groupId>
@@ -20,6 +21,30 @@
 			<artifactId>core</artifactId>
 			<version>8.0.0-SNAPSHOT</version>
 		</dependency>
+
+
+		<dependency>
+			<groupId>org.jrebirth.af</groupId>
+			<artifactId>preloader</artifactId>
+			<version>8.0.0-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.5</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.0.13</version>
+			<!-- <optional>true</optional> -->
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 
 </project>
