--- a/org.jrebirth.af/archetype/src/main/resources/archetype-resources/pom.xml
+++ b/org.jrebirth.af/archetype/src/main/resources/archetype-resources/pom.xml
@@ -89,7 +89,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>webstart-maven-plugin</artifactId>
-				<version>1.0-beta-3</version>
+				<version>1.0-beta-6</version>
 
 				<executions>
 					<execution>
@@ -141,11 +141,14 @@
 							<gen>true</gen>
 						</keystoreConfig>
 					</sign>
-
-					<pack200>true</pack200>
+					
+					<pack200>
+						<enabled>true</enabled>
+					</pack200>
 					<gzip>true</gzip>
 
 					<outputJarVersions>false</outputJarVersions>
+
 					<install>false</install>
 					<verbose>true</verbose>
 				</configuration>
