--- a/org.jrebirth.af/pom.xml
+++ b/org.jrebirth.af/pom.xml
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
 		<groupId>org.jrebirth</groupId>
 		<artifactId>organization</artifactId>
-		<version>1.0.0</version>
+		<version>1.1.0-SNAPSHOT</version>
 	</parent>
 
 	<groupId>org.jrebirth</groupId>
@@ -33,14 +33,14 @@
 		<module>core</module>
 		<module>component</module>
 		<module>archetype</module>
-		<module>sample</module>
+		<!--<module>sample</module>-->
 		<module>presentation</module>
 		<module>transition</module>
 		<module>distribution</module>
 		<!-- <module>form</module> -->
 		<module>fxform</module>
 		<module>undoredo</module>
-		<module>showcase</module>
+<!--		<module>showcase</module>-->
 		<module>preloader</module>
 	</modules>
 
@@ -257,7 +257,7 @@
 			<extension>
 				<groupId>org.apache.maven.wagon</groupId>
 				<artifactId>wagon-ssh</artifactId>
-				<version>2.4</version>
+				<version>2.6</version>
 			</extension>
 		</extensions>
 
@@ -297,7 +297,7 @@
 			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
-				<version>4.8.2</version>
+				<version>4.11</version>
 			</dependency>
 			<dependency>
 				<groupId>org.easytesting</groupId>
