--- a/org.jrebirth.af/pom.xml
+++ b/org.jrebirth.af/pom.xml
@@ -33,14 +33,14 @@
 		<module>core</module>
 		<module>component</module>
 		<module>archetype</module>
-		<!--<module>sample</module>-->
+		<module>sample</module>
 		<module>presentation</module>
 		<module>transition</module>
 		<module>distribution</module>
 		<!-- <module>form</module> -->
 		<module>fxform</module>
 		<module>undoredo</module>
-<!--		<module>showcase</module>-->
+		<module>showcase</module>
 		<module>preloader</module>
 	</modules>
 
