--- a/org.jrebirth.af/pom.xml
+++ b/org.jrebirth.af/pom.xml
@@ -22,7 +22,7 @@
 
 	<properties>
 		<LightningTalk-version>1.1.1</LightningTalk-version>
-		<MasteringTables-version>1.1.0</MasteringTables-version>
+		<MasteringTables-version>1.2.0-SNAPSHOT</MasteringTables-version>
 		<Jaf-version>1.1.1</Jaf-version>
 		<Breizhcamp-version>1.1.0</Breizhcamp-version>
 		<EclipseDay-version>1.0.0</EclipseDay-version>
