Update behavior classes

--- a/org.jrebirth.af/component/src/test/resources/config/test-jrebirth.properties
+++ b/org.jrebirth.af/component/src/test/resources/config/test-jrebirth.properties
@@ -16,9 +16,12 @@ developerMode=false
 closeRetryDelayFirst=4000
 closeRetryDelayOther=1000
 threadPoolSizeRatio=2
-waveHandlerPrefix=DO_
+waveHandlerPrefix=
 notAvailableImage=image/||NotAvailable||png
 applicationName={} powered by JRebirth
+
+## The factory used to create components.
+componentFactory=org.jrebirth.af.core.facade.factory.AnnotatedComponentFactory
 
 ###################################################################################################
 ###										Main Stage Management									###
