--- a/org.jrebirth.af/component/pom.xml
+++ b/org.jrebirth.af/component/pom.xml
@@ -16,12 +16,20 @@
 	<description>Convenient components to use with JRebirth Core</description>
 
 	<dependencies>
+
 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>core</artifactId>
 			<version>8.0.0-SNAPSHOT</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.jrebirth.af</groupId>
+			<artifactId>processor</artifactId>
+			<version>8.0.0-SNAPSHOT</version>
+			<optional>true</optional>
+			<scope>provided</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
