Create new modules

--- a/org.jrebirth.af/pom.xml
+++ b/org.jrebirth.af/pom.xml
@@ -43,8 +43,8 @@
 		<module>showcase</module>
 		<module>preloader</module>
 		<module>processor</module>
-		<!-- <module>modular</module>
-		<module>security</module> -->
+		<module>modular</module>
+		<module>security</module>
 	</modules>
 
 	<issueManagement>
