--- a/org.jrebirth.af/core/src/test/resources/config/test-jrebirth.properties
+++ b/org.jrebirth.af/core/src/test/resources/config/test-jrebirth.properties
@@ -35,7 +35,7 @@ applicationSceneBgColor=000000||0.0
 
 trueTypeFontExtension=.ttf
 fontsFolder=fonts
-imagesFolder=images
+imagesFolder=images,imagesBis
 stylesFolder=styles
 defaultStyleSheet=default
 
