Fix #122 Manage multiple Image, Style and font folders location

--- a/org.jrebirth.af/core/src/test/resources/config/test-jrebirth.properties
+++ b/org.jrebirth.af/core/src/test/resources/config/test-jrebirth.properties
@@ -35,6 +35,6 @@ applicationSceneBgColor=000000||0.0
 
 trueTypeFontExtension=.ttf
 fontsFolder=fonts
-imagesFolder=images
+imagesFolder=images,imagesBis
 stylesFolder=styles
 defaultStyleSheet=default
