Fix #123 add support for environment variable into JRebirth parameters

--- a/org.jrebirth.af/core/src/test/resources/config/test-jrebirth.properties
+++ b/org.jrebirth.af/core/src/test/resources/config/test-jrebirth.properties
@@ -17,7 +17,7 @@ closeRetryDelayFirst=4000
 closeRetryDelayOther=1000
 threadPoolSizeRatio=2
 waveHandlerPrefix=DO_
-notAvailableImage=image/||NotAvailable||png
+notAvailableImage=NotAvailable||png
 applicationName={} powered by JRebirth
 
 ###################################################################################################
@@ -38,3 +38,6 @@ fontsFolder=fonts
 imagesFolder=images,imagesBis
 stylesFolder=styles
 defaultStyleSheet=default
+
+temp1=${TMP}/first
+temp2=$TMP/second
