--- a/org.jrebirth.af/core/pom.xml
+++ b/org.jrebirth.af/core/pom.xml
@@ -38,13 +38,26 @@
 			<scope>provided</scope>
 		</dependency>
 
+
 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>processor</artifactId>
 			<version>8.0.0-SNAPSHOT</version>
 			<optional>true</optional>
 		</dependency>
-		
+
+		<!-- 
+		Dependency used at compile time to manage Java Webstart classpath scan
+		If this jar is not available the related code will not be called
+		 -->
+		<dependency>
+			<groupId>javax.jnlp</groupId>
+			<artifactId>jnlp-api</artifactId>
+			<version>7.0</version>
+			<scope>system</scope>
+			<systemPath>${java.home}/lib/javaws.jar</systemPath>
+		</dependency>
+ 
 	</dependencies>
 
 </project>
