--- a/org.jrebirth.af/pom.xml
+++ b/org.jrebirth.af/pom.xml
@@ -1,16 +1,16 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
 		<groupId>org.jrebirth</groupId>
 		<artifactId>organization</artifactId>
-		<version>1.1.0-SNAPSHOT</version>
+		<version>1.0.1</version>
 	</parent>
 
 	<groupId>org.jrebirth</groupId>
 	<artifactId>af</artifactId>
-	<version>8.0.0-SNAPSHOT</version>
+	<version>7.7.3-SNAPSHOT</version>
 
 	<packaging>pom</packaging>
 	<name>JRebirth Application Framework</name>
@@ -22,7 +22,7 @@
 
 	<properties>
 		<LightningTalk-version>1.1.1</LightningTalk-version>
-		<MasteringTables-version>1.2.0-SNAPSHOT</MasteringTables-version>
+		<MasteringTables-version>1.1.0</MasteringTables-version>
 		<Jaf-version>1.1.1</Jaf-version>
 		<Breizhcamp-version>1.1.0</Breizhcamp-version>
 		<EclipseDay-version>1.0.0</EclipseDay-version>
@@ -33,7 +33,7 @@
 		<module>core</module>
 		<module>component</module>
 		<module>archetype</module>
-		 <module>sample</module>
+		<module>sample</module>
 		<module>presentation</module>
 		<module>transition</module>
 		<module>distribution</module>
@@ -42,9 +42,6 @@
 		<module>undoredo</module>
 		<module>showcase</module>
 		<module>preloader</module>
-		<module>processor</module>
-		<module>modular</module>
-		<module>security</module>
 	</modules>
 
 	<issueManagement>
@@ -126,16 +123,6 @@
 		<!--<sourceEncoding>UTF-8</sourceEncoding> -->
 		
 		<plugins>
-		
-		<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
-			</plugin>
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -260,7 +247,7 @@
 			<extension>
 				<groupId>org.apache.maven.wagon</groupId>
 				<artifactId>wagon-ssh</artifactId>
-				<version>2.6</version>
+				<version>2.4</version>
 			</extension>
 		</extensions>
 
@@ -300,7 +287,7 @@
 			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
-				<version>4.11</version>
+				<version>4.8.2</version>
 			</dependency>
 			<dependency>
 				<groupId>org.easytesting</groupId>
