--- a/org.jrebirth.af/archetype/src/main/resources/archetype-resources/pom.xml
+++ b/org.jrebirth.af/archetype/src/main/resources/archetype-resources/pom.xml
@@ -167,6 +167,11 @@
 			<version>8.0.0-SNAPSHOT</version>
 		</dependency>
 		
+		<dependency>
+			<groupId>org.jrebirth.af</groupId>
+			<artifactId>preloader</artifactId>
+			<version>7.7.3</version>
+		</dependency>
 	</dependencies>
 
 </project>
